[FIX] scrolling on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -147,7 +147,6 @@ body {
     }
     .index-left .left-child:nth-child(1) {
         background-image: linear-gradient(-45deg, var(--lyrene-dot-1, #FF9FB2) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-1, #FF9FB2) 50%, var(--lyrene-dot-1, #FF9FB2) 75%, transparent 75%, transparent);
-        opacity: var(--opacity-1, 0);
     }
     .index-left .left-child:nth-child(1):hover,
     .index-left .left-child:nth-child(1):active {
@@ -155,7 +154,6 @@ body {
     }
     .index-left .left-child:nth-child(2) {
         background-image: linear-gradient(-45deg, var(--lyrene-dot-2, #567e8a) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-2, #567e8a) 50%, var(--lyrene-dot-2, #567e8a) 75%, transparent 75%, transparent);
-        opacity: var(--opacity-2, 0);
     }
     .index-left .left-child:nth-child(2):hover,
     .index-left .left-child:nth-child(2):active {
@@ -163,7 +161,6 @@ body {
     }
     .index-left .left-child:nth-child(3) {
         background-image: linear-gradient(-45deg, var(--lyrene-dot-3, #A89F68) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-3, #A89F68) 50%, var(--lyrene-dot-3, #A89F68) 75%, transparent 75%, transparent);
-        opacity: var(--opacity-3, 0);
     }
     .index-left .left-child:nth-child(3):hover,
     .index-left .left-child:nth-child(3):active {
@@ -171,7 +168,6 @@ body {
     }
     .index-left .left-child:nth-child(4) {
         background-image: linear-gradient(-45deg, var(--lyrene-dot-4, #80637d) 25%, transparent 25%, transparent 50%, var(--lyrene-dot-4, #80637d) 50%, var(--lyrene-dot-4, #80637d) 75%, transparent 75%, transparent);
-        opacity: var(--opacity-4, 0);
     }
     .index-left .left-child:nth-child(4):hover,
     .index-left .left-child:nth-child(4):active {
